--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
 	animation-duration: 6s;
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
+	animation-direction: reverse;
 }
 
 .a1{
@@ -40,10 +41,6 @@ body{
 	100% {left: 100%; color: white;}
 }
 
-.hero{
-	width: 100%;
-}
-
 @font-face{
 	font-family: "dudu-font";
 	src: url("dudu-font.TTF");
@@ -55,27 +52,57 @@ p{
 	color: white;
 }
 
-.p0{
-	letter-spacing: 1em;
-	position: absolute;
-	top: 90%;
+.logo-container{
 	text-align: center;
+	margin-top: 3em;
 }
 
-.p1{
-	left: 7.5%;
+.logo-container img{
+	height: 3em;
 }
 
-.p2{
-	left: 36%;
-}
-
-.p3{
-	left: 80%;
-}
-
-.title-container{
-	width: 100%;
+.hero{
 	display: flex;
-	flex-grow: 3;
+	text-align: center;
+	justify-content: center;
+}
+
+.hero div{
+	margin: 1em;
+}
+
+.hero-img{
+	width: 100%;
+	height: 90%;
+}
+
+.img-text{
+	bottom: 6em;
+	position: relative;
+	letter-spacing: 1em;
+	font-size: 1em;
+}
+
+.info{
+	text-align: center;
+	font-weight: bold;
+	letter-spacing: 1em;
+}
+
+.info p{
+	color: black;
+}
+
+.info p:first-child{
+	font-size: 1.5em;
+	margin-top: 0;
+}
+
+.info p:nth-child(0n+2){
+	font-size: 1.25em;
+}
+
+.info p:last-child{
+	font-size: 0.8em;
+	letter-spacing: 0.8em;
 }
