--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@ body{
 	width: 100%;
 	height: 2em;
 	letter-spacing: 0.5em;
-	top: 50%;
-	position: fixed;
+	top: 26em;
+	overflow: hidden;
+	position: absolute;
 }
 
 .animation-text{
 	position: relative;
-	animation-duration: 6s;
+	animation-duration: 7s;
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
 	animation-direction: reverse;
@@ -87,6 +88,7 @@ p{
 	text-align: center;
 	font-weight: bold;
 	letter-spacing: 1em;
+	margin-bottom: 6em;
 }
 
 .info p{
@@ -105,4 +107,32 @@ p{
 .info p:last-child{
 	font-size: 0.8em;
 	letter-spacing: 0.8em;
+}
+
+.extra-info{
+	text-align: center;
+	margin-top: 6em;
+}
+
+.extra-info div{
+	margin-top: 6em;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:black;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
 }
