--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 	width: 100%;
 	height: 2em;
 	letter-spacing: 0.5em;
-	top: 26em;
+	top: 24em;
 	overflow: hidden;
 	position: absolute;
 }
@@ -62,11 +62,18 @@ p{
 	height: 3em;
 }
 
-.hero{
+.hero {
 	display: flex;
 	text-align: center;
 	justify-content: center;
 }
+
+@media (max-width: 768px){
+	.hero {
+		display: block;
+	}
+}
+
 
 .hero div{
 	margin: 1em;
@@ -89,6 +96,7 @@ p{
 	font-weight: bold;
 	letter-spacing: 1em;
 	margin-bottom: 6em;
+	margin-top: 6em;
 }
 
 .info p{
@@ -135,4 +143,9 @@ p{
 
 .my-float{
 	margin-top:16px;
+}
+
+.float-text{
+	font-size: 1em;
+	z-index:99;
 }
